# dev_Arquitectura_Simulador-CPU

./: .gitignore  LSL_debug.py  Plantilla.json  Prototipo.puml  Readme.md  Test_shift.py  auto_init_manager.py  fix_imports.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  test_Alu.py  test_LSL.py  test_controlstore.py  test_fsm.py  test_microcounter.py
Business/: Computer_System.py  __init__.py
Business/Basic_Components/: Bit.py  Bus.py  Logic_Gate.py  MUX3to1.py  MUX4to1.py  Record.py  __init__.py
Business/Basic_Components/Logic_Gates/: AND_Gate.py  AND_Gate_4.py  OR_Gate_8.py  __init__.py
Business/CPU_Core/: Arithmetic_Unit.py  CPU.py  Full_Adder.py  Shift_Unit.py  __init__.py
Business/CPU_Core/Arithmetic_Logical_Unit/: ALU.py  MUX.py  __init__.py
Business/Logic_Gates/: AND_Gate.py  NOT_Gate.py  OR_Gate.py  XOR_Gate.py  __init__.py
Business/Memory/: RAM.py  ROM.py  SystemBus.py  __init__.py
Data/Configs/: default.json
Data/Programs/: Div.json  FlagTest.json  LogicOpsTest.json  Mult.json  RegisterTest.json  Test.json
Diagramas-Prototipos/: E_S_Prototipo.puml  Prototipo.puml  Prototipo2.puml  Prototipo3.puml  Prototipo4.puml  Prototipo5.puml  Prototipo6.puml  aux.puml
docs/: # File Tree: CPU_Simulator.md  ALU_Mapeo_Control.md  Estado.md  ISA_Conjunto_Instrucciones.md  Mux 2 to 1
logs/: test_20251208_105613.json
tests/: Test_Arithmetic_Unit.py  Test_Barrel_Shifter.py  Test_Bit.py  Test_Bus.py  Test_Full_Adder.py  Test_Logic_Gates.py  Test_MUX2to1.py  Test_MUX8to1.py  Test_Shift_Full.py  Test_Shift_Unit.py
(+25 files in other folders)
