[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simulador-cpu"
version = "0.1.0"
description = "Simulador de CPU con componentes lógicos"
authors = [{name = "Luis", email = "luisalexanderrojasguevara@email.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Business*"]
